<resources>
    <string name="app_name">mobiCare</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_sync_in_progress">User sync in progress please wait...</string>
    <string name="error_msg_sync_failed">Sync failed, please try again!</string>
    <string name="user_registration_title_text">See for yourself why millions of pleaple love mobiCare</string>
    <string name="sign_up_text">Sing up for mobiCare, it\'s free</string>
    <string name="personal_account_text">Personal account</string>
    <string name="continue_text">Continue</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="create_password">Create your password</string>
    <string name="regist_user">Create account</string>
    <string name="user_name">Enter your user name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="mainMobileNumber">Mobile phone number</string>
    <string name="auxMobileNumber">Optional mobile phone</string>
    <string name="address">Address details</string>
    <string name="municipal">Urban</string>
    <string name="rural">Rural</string>
    <string name="rua_av">Street/Avenue</string>
    <string name="houseNumber">Door number</string>
    <string name="select_provincia">Select the province</string>
    <string name="select_distrito">Select the district</string>
    <string name="select_municipio">Select the municipality</string>
    <string name="select_posto">Select the posto</string>
    <string name="select_bairro">Select the neibourghood</string>
    <string name="login_text">Start session</string>
    <string name="user_registration_link_text">First time using MobiCare? Create an account</string>
    <string name="user_forgotten_pass_link_text">Esqueceu a senha?</string>
    <string name="localizacao_settings_sync_in_progress">Location settings sync in progress, please wait...</string>
    <string name="activity_login_alert_ok">OK</string>
    <string name="network_not_available">Internet signal not availabel, please check your device Internet settings and try again.</string>

    <string name="title_activity_mobi_care_login">MobiCareLogin</string>
    <string name="login_user_name">User name</string>
    <string name="login_password">Password</string>
    <string name="user_password_invalid">Os dados de utilizador ou palavra passe são inválidos.</string>
    <string name="login_app_name">mobiCare</string>
    <string name="user_name_is_taken">User name not available, try another one!</string>
    <string name="checking_user_name_availability">Checking user name availability, please wait...</string>
    <string name="passwords_not_match">Informed password does not match, please check!</string>
    <string name="user_name_short">Please make sure the user name has at lest four carateres!</string>
    <string name="passwords_short">Please make sure your password has at lest four carateres!</string>
    <string name="search_what_you_want">mobiCare</string>
    <string name="searching">Searching...</string>
    <string name="no_search_results">No results for your search!</string>
    <string name="sync_time_out">Sync failed due to time out, try again!</string>
    <string name="loading_user_data">Loading user data, please wait...</string>
    <string name="internet_not_available">Internet not available, check your connection settings.</string>
    <string name="checking_credential">Checking your credentials...</string>
</resources>
