<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.login.LoginActivity">

    <data>
        <variable
            name="user"
            type="mz.co.insystems.mobicare.model.user.User"/>

    </data>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff9f5">



        <LinearLayout
            android:id="@+id/inputs"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_content_padding">

            <ImageView
                android:layout_width="@dimen/user_registration_imview_width"
                android:layout_height="@dimen/user_registration_imview_heigth"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                />


                <TextView
                android:id="@+id/user_registration_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_14dp"
                style="@style/user_registration_title_text"
                android:text="@string/user_registration_title_text" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/color_line"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_text_appearence"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:hint="@string/user_name"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:text="@{user.userName}"
                    style="@style/edit_text_style"
                    android:background="@drawable/edit_text_border"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_text_appearence"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:hint="@string/create_password"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:inputType="textPassword"
                    android:text="@{user.password}"
                    style="@style/edit_text_style"
                    android:background="@drawable/edit_text_border"/>

            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_marginTop="@dimen/dimen_14dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_above="@+id/btnContinue"
                android:background="@color/button_dark_back"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textColor="@drawable/button_text_color"
                android:background="@drawable/button_shape"
                android:text="@string/login_text"/>

            <TextView
                android:id="@+id/user_registration_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_14dp"
                style="@style/user_registration_title_text"
                android:text="@string/user_registration_link_text" />
            <TextView
                android:id="@+id/user_forgotten_pass_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_14dp"
                style="@style/user_registration_title_text"
                android:text="@string/user_forgotten_pass_link_text" />

        </LinearLayout>



    </RelativeLayout>
</layout>